# synapse-ai

./: .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  README.md  SKILL-agent.md  SKILL-ingestion.md  SKILL-supabase.md  SKILL-tanstack-start.md  package.json  render.yaml  tsconfig.json
.github/workflows/: deploy.yml  docker.yml
.opencode/: mcp.json
apps/agent/: .env.example  Dockerfile  main.py  pyproject.toml  render.yaml  requirements.txt
apps/agent/agent/: __init__.py  graph.py  memory.py  state.py
apps/agent/agent/nodes/: __init__.py  classifier.py  decomposer.py  evaluator.py  formatter.py  generator.py  ranker.py  retriever.py
apps/agent/connectors/: base.py  local_files.py  web_crawler.py
apps/agent/db/: supabase.py
apps/agent/ingestion/: chunker.py  embedder.py  pipeline.py
apps/web/: .env.example  .env.local  app.config.ts  package.json  tsconfig.json  vercel.json  vite.config.ts
apps/web/app/: client.tsx  entry.server.tsx  globals.css  router.tsx
apps/web/app/components/chat/: ChatInput.tsx  MessageBubble.tsx  SourcesPanel.tsx  StreamingIndicator.tsx
apps/web/app/hooks/: useChat.ts  useIngest.ts
apps/web/app/lib/: supabase.server.ts
apps/web/app/routes/: __root.tsx  index.tsx
apps/web/app/routes/api/chat/: stream.ts
apps/web/app/routes/dashboard/: __root.tsx  index.tsx
apps/web/app/routes/dashboard/chat/: $id.tsx  index.tsx
apps/web/app/server/: auth.ts  chat.ts  collections.ts  ingest.ts
apps/web/public/: index.html
supabase/migrations/: 001_initial.sql  002_hybrid_search.sql  003_rls_policies.sql
(+2 files in other folders)
